# x2md

./: README.md
gen_link/: gen_readme.py
llm_pdf_md/: .gitignore  README.md  config.example.toml  pyproject.toml
llm_pdf_md/pdf2md/: __init__.py  __main__.py  api.py  cli.py  config.py  llm.py  output.py  prompts.py  render.py
llm_pdf_md/tests/: test_smoke.py
pdf_md/: .gitignore  README.md  pyproject.toml
pdf_md/pdf2x/: __init__.py  api.py  cli.py  fonts.py  ir.py
pdf_md/pdf2x/parser/: __init__.py  images.py  ocr.py  tables.py  text.py
pdf_md/pdf2x/render/: __init__.py  html_exact.py  html_flow.py  html_image.py  markdown.py
pdf_md/tests/: test_font_cmap.py  test_html_image.py  test_smoke.py
to_md/: .gitignore  CLAUDE.md  README.md  build.ps1  build.sh  pyproject.toml  web2md.spec  wx2md.spec
to_md/docs/: TECHNICAL.md  下一阶段方案.md  使用教程.md  用户文档.md
to_md/examples/: test_batch.txt  test_invalid.txt  test_single.txt  urls.txt.example
to_md/web2md/: __init__.py  __main__.py  cli.py  common.py  core.py  net.py  parser_bjh.py  parser_wx.py  templates.py
to_md/wx2md/: __init__.py  __main__.py  cli.py  core.py  net.py  parser.py  parser_bjh.py  templates.py
