[project]
name = "pdf2md"
version = "0.1.0"
description = "Convert PDF to human-friendly Markdown via a multimodal LLM (Claude)."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "pdf2md" }]
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40",
    "pymupdf>=1.24.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
pdf2md = "pdf2md.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdf2md"]
