[project]
name = "pdf2x"
version = "0.1.0"
description = "Convert PDF to pixel-faithful HTML and structure-aligned Markdown."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "pdf2x" }]
license = { text = "MIT" }
dependencies = [
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "click>=8.1.7",
    "fonttools[woff]>=4.50.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "lxml>=5.0",
]

[project.scripts]
pdf2x = "pdf2x.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdf2x"]
