[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wx2md"
version = "0.1.0"
description = "Convert WeChat official-account articles to Markdown + HTML with local images."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "markdownify>=0.13",
]

[project.scripts]
wx2md = "wx2md.cli:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.10",
]

[tool.hatch.build.targets.wheel]
packages = ["wx2md"]
